[gd_scene load_steps=16 format=3 uid="uid://cgwy3pl1r634c"]

[ext_resource type="Script" uid="uid://cmy1bfchwgop3" path="res://Scripts/Enemies/light_head_enemy.gd" id="1_26rmp"]
[ext_resource type="Texture2D" uid="uid://p7n56www3drr" path="res://Graphics/Enemy/LightHeadEnemy.png" id="1_o2nhv"]
[ext_resource type="PackedScene" uid="uid://c06h7nmwxk8xn" path="res://Scenes/Components/walk_component.tscn" id="1_xuhir"]
[ext_resource type="Texture2D" uid="uid://bruvgravjvakb" path="res://Graphics/Particles/WideLightTexture.png" id="4_20lou"]
[ext_resource type="PackedScene" uid="uid://7r71nhjr87r" path="res://Scenes/Components/on_jump_component.tscn" id="5_lfjdx"]
[ext_resource type="PackedScene" uid="uid://bg8806v1rj0h7" path="res://Scenes/Components/on_ground_pound_component.tscn" id="6_5pgui"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xuhir"]
atlas = ExtResource("1_o2nhv")
region = Rect2(1, 26, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_26rmp"]
atlas = ExtResource("1_o2nhv")
region = Rect2(18, 26, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_20lou"]
atlas = ExtResource("1_o2nhv")
region = Rect2(35, 26, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfjdx"]
atlas = ExtResource("1_o2nhv")
region = Rect2(52, 26, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgui"]
atlas = ExtResource("1_o2nhv")
region = Rect2(1, 1, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xjcp"]
atlas = ExtResource("1_o2nhv")
region = Rect2(18, 1, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5skcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuhir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26rmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20lou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfjdx")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xjcp")
}],
"loop": true,
"name": &"Walk",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebha4"]
size = Vector2(10, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi540"]
size = Vector2(10, 21)

[node name="LightHead" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_26rmp")

[node name="WalkComponent" parent="." instance=ExtResource("1_xuhir")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5skcb")
animation = &"Walk"
autoplay = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_ebha4")

[node name="InteractionHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_oi540")
debug_color = Color(0.714242, 0.257843, 1, 0.42)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-48, -5)
color = Color(0.999999, 0.992743, 0.294019, 1)
texture = ExtResource("4_20lou")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -19.5)
scale = Vector2(12.2, 5.25)

[node name="OnJumpComponent" parent="." instance=ExtResource("5_lfjdx")]

[node name="OnGroundPoundComponent" parent="." instance=ExtResource("6_5pgui")]

[connection signal="body_entered" from="InteractionHitbox" to="." method="_on_interaction_hitbox_body_entered"]
[connection signal="body_entered" from="InteractionHitbox" to="OnJumpComponent" method="_on_interaction_hitbox_body_entered"]
[connection signal="body_entered" from="InteractionHitbox" to="OnGroundPoundComponent" method="_on_interaction_hitbox_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="jumped_on" from="OnJumpComponent" to="." method="_on_on_jump_component_jumped_on"]
[connection signal="ground_pound_on" from="OnGroundPoundComponent" to="." method="_on_on_ground_pound_component_ground_pound_on"]
